@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.67">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.68">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,8 +25,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.67 [20230420]:
-- Fix regression error from last commit disabling subs on zoro streams
+Changelog 0.3.68 [20230427]:
+- Handled Consumet error
+- Added New Context menu "mark as completed"
     </news>
   </extension>
 </addon>
